tests/baselines/reference/functionInIfStatementInModule(strict=true).errors.txt
functionInIfStatementInModule.ts(5,18): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
functionInIfStatementInModule.ts(5,22): error TS7006: Parameter 'src' implicitly has an 'any' type.


==== functionInIfStatementInModule.ts (2 errors) ====
     
    module Midori
    {
        if (false) {
            function Foo(src)
                     ~~~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
                         ~~~
!!! error TS7006: Parameter 'src' implicitly has an 'any' type.
            {
            }
        }
    }
    